unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/CMPL123CME__MEDDEV__c.object-meta.xml
<CustomObject>
    <description>Medical Devices Vigilance System</description>
    <label>MEDDEV</label>
    <nameField>
        <displayFormat>MD{0000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MEDDEV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>