unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Accessories__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Accessories__c</fullName>
        <description>Accessories / associated devices</description>
        <inlineHelpText>Accessories / associated devices (if applicable)</inlineHelpText>
        <label>Accessories / associated devices</label>
        <type>TextArea</type>
    </CustomField>