unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Address_of_National_Competent_Authority__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Address_of_National_Competent_Authority__c</fullName>
        <description>Address of National Competent Authority</description>
        <inlineHelpText>Address of National Competent Authority</inlineHelpText>
        <label>NCA Address</label>
        <type>TextArea</type>
    </CustomField>