unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__AE_Codes__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__AE_Codes__c</fullName>
        <label>AE Codes</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>