unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Age_Units__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Age_Units__c</fullName>
        <label>Age Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>