unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Authorised_Representative_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Address__c</fullName>
        <description>Authorised Representative Address</description>
        <inlineHelpText>Authorised Representative Address</inlineHelpText>
        <label>Authorised Rep Address</label>
        <type>TextArea</type>
    </CustomField>