unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Authorised_Representative_City__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_City__c</fullName>
        <description>Authorised Representative City</description>
        <inlineHelpText>Authorised Representative City</inlineHelpText>
        <label>Authorised Rep City</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>