unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Authorised_Representative_Contact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Contact__c</fullName>
        <description>Authorised Representative Contact</description>
        <inlineHelpText>Authorised Representative Contact</inlineHelpText>
        <label>Authorised Rep Contact</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>