unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Authorised_Representative_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Email__c</fullName>
        <description>Authorised Representative Email</description>
        <inlineHelpText>Authorised Representative Email</inlineHelpText>
        <label>Authorised Rep E-mail</label>
        <type>Email</type>
    </CustomField>