unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Authorised_Representative_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Name__c</fullName>
        <description>Name of the Authorised Representative</description>
        <inlineHelpText>Name of the Authorised Representative</inlineHelpText>
        <label>Authorised Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>