unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Authorised_Representative_Phone__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Phone__c</fullName>
        <description>Authorised Representative Phone</description>
        <inlineHelpText>Authorised Representative Phone</inlineHelpText>
        <label>Authorised Rep Phone</label>
        <type>Phone</type>
    </CustomField>