unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Authorised_Representative_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Authorised_Representative_Postal_Code__c</fullName>
        <description>Authorised Representative Postal Code</description>
        <inlineHelpText>Authorised Representative Postal Code</inlineHelpText>
        <label>Authorised Rep Postcode</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>