unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Catalogue_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Catalogue_Number__c</fullName>
        <description>Catalogue number</description>
        <inlineHelpText>Catalogue number</inlineHelpText>
        <label>Catalogue number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>