unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Clinical_Investigation_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Clinical_Investigation_Number__c</fullName>
        <label>Clinical Investigation Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>