unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Comments__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Comments__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>