unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Commercial_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Commercial_Name__c</fullName>
        <description>Commercial name/ brand name / make</description>
        <inlineHelpText>Commercial name/ brand name / make</inlineHelpText>
        <label>Commercial name/ brand name / make</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>