unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Complaint__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Complaint</description>
        <inlineHelpText>Related Complaint</inlineHelpText>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>MEDDEV</relationshipLabel>
        <relationshipName>MEDDEV</relationshipName>
        <type>Lookup</type>
    </CustomField>