unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Contact_Info__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Contact_Info__c</fullName>
        <label>Contact Info</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>