unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Contact_Person_in_Facility__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Contact_Person_in_Facility__c</fullName>
        <description>Contact person within the facility</description>
        <inlineHelpText>Contact person within the facility</inlineHelpText>
        <label>Healthcare Facility Contact</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>