unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Device_Expiry_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Expiry_Date__c</fullName>
        <description>Device Expiry date</description>
        <inlineHelpText>Device Expiry date</inlineHelpText>
        <label>Device expiry date</label>
        <type>Date</type>
    </CustomField>