unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Device_Mfr_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Mfr_Date__c</fullName>
        <description>Device Mfr Date</description>
        <inlineHelpText>Device Mfr Date</inlineHelpText>
        <label>Device Manufactured Date</label>
        <type>Date</type>
    </CustomField>