unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Duration_of_Implantation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Duration_of_Implantation__c</fullName>
        <description>Duration of Implantation</description>
        <inlineHelpText>To be filled if the exact implant and explant dates are unknown</inlineHelpText>
        <label>Duration of Implantation</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>