unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Event_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Event_Code__c</fullName>
        <label>Event Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>