unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Expected_Date_of_Next_Report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Expected_Date_of_Next_Report__c</fullName>
        <description>Expected date of next report</description>
        <inlineHelpText>Expected date of next report</inlineHelpText>
        <label>Expected date of next report</label>
        <type>Date</type>
    </CustomField>