unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Explant_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Explant_Date__c</fullName>
        <description>Explant date</description>
        <inlineHelpText>Explant date</inlineHelpText>
        <label>Explant date (For implants only)</label>
        <type>Date</type>
    </CustomField>