unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__FDA_Report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__FDA_Report__c</fullName>
        <label>FDA Report</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>