unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__FDAReport__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__FDAReport__c</fullName>
        <label>FDA Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>