unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Final_Comments_of_Manufacturer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Final_Comments_of_Manufacturer__c</fullName>
        <description>Final comments from the manufacturer</description>
        <inlineHelpText>Final comments from the manufacturer</inlineHelpText>
        <label>Final comments from the manufacturer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>