unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Form_Language__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Form_Language__c</fullName>
        <defaultValue>"en"</defaultValue>
        <label>Form Language</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>