unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Further_Investigations__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Further_Investigations__c</fullName>
        <description>Further investigations</description>
        <inlineHelpText>Further investigations</inlineHelpText>
        <label>Further investigations</label>
        <type>TextArea</type>
    </CustomField>