unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Gender__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Gender__c</fullName>
        <description>Gender</description>
        <inlineHelpText>Gender</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>