unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__HealthCare_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__HealthCare_Address__c</fullName>
        <description>HealthCare Address</description>
        <inlineHelpText>HealthCare Address</inlineHelpText>
        <label>Healthcare Facility Address</label>
        <type>TextArea</type>
    </CustomField>