unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__HealthCare_City__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__HealthCare_City__c</fullName>
        <description>HelathCare City</description>
        <inlineHelpText>HelathCare City</inlineHelpText>
        <label>Healthcare Facility City</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>