unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__HealthCare_Email__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__HealthCare_Email__c</fullName>
        <description>HelathCare Email</description>
        <inlineHelpText>HelathCare Email</inlineHelpText>
        <label>Healthcare Facility E-mail</label>
        <type>Email</type>
    </CustomField>