unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__HealthCare_Fax__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__HealthCare_Fax__c</fullName>
        <description>HealthCare Fax</description>
        <inlineHelpText>HealthCare Fax</inlineHelpText>
        <label>Healthcare Facility Fax</label>
        <type>Phone</type>
    </CustomField>