unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__HealthCare_Phone__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__HealthCare_Phone__c</fullName>
        <description>HealthCare Phone</description>
        <inlineHelpText>HealthCare Phone</inlineHelpText>
        <label>Healthcare Facility Phone</label>
        <type>Phone</type>
    </CustomField>