unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__HealthCare_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__HealthCare_Postal_Code__c</fullName>
        <description>HealthCare Postal code</description>
        <inlineHelpText>HealthCare Postal code</inlineHelpText>
        <label>Healthcare Facility Postcode</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>