unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Healthcare_Professional_Aware_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Healthcare_Professional_Aware_Date__c</fullName>
        <label>Healthcare Professional Aware Date</label>
        <type>Date</type>
    </CustomField>