unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__If_device_operator_is_others_specify__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_device_operator_is_others_specify__c</fullName>
        <description>If device operator is others, please specify name</description>
        <inlineHelpText>If device operator is others, please specify name</inlineHelpText>
        <label>If device operator is others, specify</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>