unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__If_status_of_submitter_is_others_specify__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_status_of_submitter_is_others_specify__c</fullName>
        <label>If status of submitter is others,specify</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>