unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__If_usage_of_med_device_is_others_specify__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_usage_of_med_device_is_others_specify__c</fullName>
        <description>If usage of medical device is others, please specify</description>
        <inlineHelpText>If usage of medical device is others, please specify</inlineHelpText>
        <label>If usage of med device is others,specify</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>