unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__If_yes_state_report_ref_and_countries_LT__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_yes_state_report_ref_and_countries_LT__c</fullName>
        <description>If yes, state in which countries and the report reference numbers of the incidents.</description>
        <inlineHelpText>If yes, state in which countries and the report reference numbers of the incidents.</inlineHelpText>
        <label>If yes, state report ref and countries</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </CustomField>