unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__If_Yes_State_ReportRef_and_Countries__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_Yes_State_ReportRef_and_Countries__c</fullName>
        <description>If yes, state in which countries and the report reference numbers of the incidents.</description>
        <inlineHelpText>If yes, state in which countries and the report reference numbers of the incidents.</inlineHelpText>
        <label>If yes, state report ref/countries(text)</label>
        <type>TextArea</type>
    </CustomField>