unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Implant_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Implant_Date__c</fullName>
        <description>Implant date</description>
        <inlineHelpText>Implant date</inlineHelpText>
        <label>Implant date (For implants only)</label>
        <type>Date</type>
    </CustomField>