unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Incident_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Incident_Date__c</fullName>
        <description>Date the incident occured</description>
        <inlineHelpText>Date the incident occured</inlineHelpText>
        <label>Date the incident occurred</label>
        <type>Date</type>
    </CustomField>