unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Incident_Description_Narrative__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Incident_Description_Narrative__c</fullName>
        <description>Incident description narrative</description>
        <inlineHelpText>Incident description narrative</inlineHelpText>
        <label>Incident description narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>