unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Initial_Corrective_Preventive_Actions__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Initial_Corrective_Preventive_Actions__c</fullName>
        <description>Initial corrective action/preventive actions implemented by the manufacturer</description>
        <inlineHelpText>Initial corrective action/preventive actions implemented by the manufacturer</inlineHelpText>
        <label>Initial CAPAs implemented by the Mfg.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>