unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Lot_Numbers__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Lot_Numbers__c</fullName>
        <description>Lot/batch number(s)</description>
        <inlineHelpText>Lot/batch number(s)</inlineHelpText>
        <label>Lot/batch number(s) (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>