unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Address__c</fullName>
        <description>Manufacuter Address</description>
        <inlineHelpText>Manufacuter Address</inlineHelpText>
        <label>Manufacturer Address</label>
        <type>TextArea</type>
    </CustomField>