unpackaged/main/default/objects/CMPL123CME__MEDDEV__c/fields/CMPL123CME__Manufacturer_Awareness_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Awareness_Date__c</fullName>
        <description>Manufacturer’s awareness date</description>
        <inlineHelpText>Manufacturer’s awareness date</inlineHelpText>
        <label>Manufacturer’s awareness date</label>
        <type>Date</type>
    </CustomField>